# rCore-N

os/: Cargo.toml  justfile
os/src/: main.rs  plic.rs
os/src/async_rt/: executor.rs  mod.rs  reactor.rs  task.rs
os/src/async_rt/fs/: mod.rs  pipe.rs
os/src/fs/: pipe.rs
os/src/syscall/: fs.rs  mod.rs
os/src/task/: manager.rs  mod.rs  processor.rs
os/src/trap/: mod.rs  usertrap.rs
user/: Cargo.toml
user/src/: lib.rs  syscall.rs  trap.rs
user/src/async_rt/: executor.rs  fs.rs  mod.rs  reactor.rs  syscall.rs  task.rs
